--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,14 @@ header {
     padding: 4rem 0 3rem 0;
 }
 
+.header-image {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    margin-bottom: 2rem;
+    border: 1px solid #333333;
+}
+
 h1 {
     font-size: 1.5rem;
     font-weight: 300;
